# acronym-slackbot

./: ..gitignore.icloud  .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  acronyms.json  admin_interface_themes.json  docker-compose.yml  docker-entrypoint.sh  justfile  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  zizmor.yml
.github/: dependabot.yml
.github/workflows/: .prod 2.yml.icloud  automerge.yml  django.yml  prod.yml  sync-uat.yml
acronyms/: admin.py  apps.py  models.py  urls.py  views.py
acronyms/migrations/: 0001_initial.py  0002_alter_acronym_unique_together.py  0003_alter_acronym_options.py  0004_acronym_create_by_acronym_create_date.py  0005_acronym_approved.py  0006_alter_acronym_approved.py  0007_acronym_delete_by_acronym_delete_date_and_more.py  0008_alter_acronym_delete_by.py
acronyms/tests/: test_models.py
api/: apps.py  serializers.py  urls.py  utils.py  views.py
api/tests/: .test_classes.py.icloud  test_utils.py  test_views.py
core/: .env  settings.py  storage_backends.py  tests.py  urls.py
requirements/: base.txt  local.txt
templates/: 403.html  500.html  _base.html  _navigation.html
templates/acronyms/: index.html
